# qryon

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.action  Dockerfile.release  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  action.yml  install.ps1  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/rma-scan/: action.yml
.github/workflows/: ci.yml  release.yml  rma-example.yml  rma-scan.yml  update-homebrew-tap.yml
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs  prompts.rs
crates/ai/src/providers/: claude.rs  local.rs  openai.rs
crates/analyzer/: Cargo.toml
crates/analyzer/src/: cache.rs  diff.rs  lib.rs  metrics.rs  project.rs  rules.rs  semgrep.rs  ts_query_matcher.rs
crates/analyzer/src/callgraph/: mod.rs
crates/analyzer/src/flow/: cfg.rs  dataflow.rs  interprocedural.rs  liveness.rs  mod.rs  reaching_defs.rs  sources.rs  symbol_table.rs  taint.rs  typestate.rs
crates/analyzer/src/imports/: go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs
crates/analyzer/src/knowledge/: merged.rs  mod.rs  types.rs
crates/analyzer/src/knowledge/go/: echo.rs  gin.rs  gorm.rs  mod.rs  net_http.rs
crates/analyzer/src/knowledge/java/: jakarta.rs  jdbc.rs  mod.rs  spring.rs
crates/analyzer/src/knowledge/javascript/: express.rs  mod.rs  nextjs.rs  node_core.rs  prisma.rs  react.rs  vue.rs
crates/analyzer/src/knowledge/python/: django.rs  fastapi.rs  flask.rs  mod.rs
crates/analyzer/src/knowledge/rust_lang/: actix.rs  axum.rs  mod.rs  rocket.rs  std_lib.rs
crates/analyzer/src/providers/: gosec.rs  mod.rs  osv.rs  oxc_native.rs  oxlint.rs  pmd.rs  rustsec.rs
crates/analyzer/src/providers/registry/: crates_io.rs  go.rs  mod.rs  npm.rs  pypi.rs
crates/analyzer/src/security/: dataflow_rules.rs  generic.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs  typestate_rules.rs  xss_taint.rs
crates/analyzer/src/semantics/: go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs
crates/analyzer/tests/: typestate_integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: filter.rs  main.rs  progress.rs
crates/cli/src/commands/: baseline.rs  bench.rs  cache.rs  config.rs  daemon.rs  doctor.rs  fix.rs  flows.rs  init.rs  mod.rs  scan.rs  search.rs  security.rs  stats.rs  suppress.rs  watch.rs
crates/cli/src/output/: github.rs  html.rs  json.rs  mod.rs  pretty.rs  sarif.rs  tables.rs  text.rs
crates/cli/src/output/diagnostics/: codes.rs  mod.rs  renderer.rs
crates/cli/src/tui/: mod.rs
crates/cli/src/ui/: errors.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs
crates/common/src/suppression/: mod.rs  store.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: api.rs  lib.rs  state.rs  websocket.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs  search.rs  store.rs  watcher.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: backend.rs  diagnostics.rs  main.rs
crates/parser/: Cargo.toml
crates/parser/benches/: parser_bench.rs
crates/parser/src/: languages.rs  lib.rs  walker.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: host.rs  lib.rs  loader.rs  registry.rs
crates/rules/: Cargo.toml  build.rs
crates/rules/src/: embedded.rs  format.rs  lib.rs  matcher.rs  pattern.rs  registry.rs  translator.rs  ts_matcher.rs
docs/: API.md  CLI.md  GITHUB-ACTION.md  INSTALLATION.md
editors/: README.md
homebrew/: qryon.rb
npm/: README.md  install.js  package.json
