[package]
name = "rma-analyzer"
description = "Code analysis and security scanning for Rust Monorepo Analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rma-common = { path = "../common" }
rma-parser = { path = "../parser" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
petgraph.workspace = true
tree-sitter.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
