[package]
name = "rma-daemon"
description = "Background daemon and API server for Rust Monorepo Analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rma-common = { path = "../common" }
rma-parser = { path = "../parser" }
rma-analyzer = { path = "../analyzer" }
rma-indexer = { path = "../indexer" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

[dev-dependencies]
tempfile.workspace = true
