[package]
name = "rma-rules"
version = "0.19.0"
edition = "2021"
description = "Rule engine for Qryon - loads and executes security rules from YAML (Semgrep-compatible)"
license = "MIT"
repository = "https://github.com/bumahkib7/qryon"
build = "build.rs"
include = ["src/**/*", "Cargo.toml", "build.rs", "rules/**/*"]

[features]
default = ["tree-sitter-matching"]
tree-sitter-matching = ["dep:rma-parser", "dep:tree-sitter"]

[dependencies]
rma-common = { version = "0.19.0", path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
bincode = "1.3"
regex = "1.10"
glob = "0.3"
walkdir = "2.4"
thiserror = "1.0"
tracing = "0.1"
once_cell = "1.19"
rayon = "1.8"

# Optional tree-sitter runtime matching
rma-parser = { version = "0.19.0", path = "../parser", optional = true }
tree-sitter = { workspace = true, optional = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"
walkdir = "2.4"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
